--- a/NarrativeMaze/nbproject/private/private.properties
+++ b/NarrativeMaze/nbproject/private/private.properties
@@ -2,6 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\AHHAAHAHHAHAHAHA\\Documents\\mysql-connector-java-8.0.17.jar
+file.reference.protobuf-java-3.6.1.jar=C:\\Users\\AHHAAHAHHAHAHAHA\\Documents\\mysql-connector-java-8.0.17.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
